--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+
     <title>Poker croupier</title>
+    <meta
+      name="description"
+      content="Use this app to play poker with your friends without cards. The app distribute cards in your device faster then a croupier."
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
